--- a/index.html
+++ b/index.html
@@ -47,10 +47,24 @@ and open the template in the editor.
             <br>
         </header>
     <main>
+        <a href="moritzRohleder.html" class="invisLinkS">
+            <h1 id="Head">
+                Moritz Rohleder
+            </h1>
+        </a>
+        <br>   
+        <p>
+            <!--
+            <h3>Nam&aacuteri&euml</h3>
+            <a href="namarie.html"><img src="Bilder/393px-Namarie_Tengwar.png" alt=""/></a>
+            -->
+            <h3>Nam&aacuteri&euml</h3>
+            <a href="namarie.html" ><img src="Bilder/393px-Namarie_Tengwar.png" class="namarieimg" alt=""> </a>
+        </p>
     </main>
-    <footer>
+        <footer>
             <br>
-            ArdasLegens<a href="impressum.html"> Impressum </a>
+            &copy;Moritz Rohleder<a href="impressum.html"> Impressum </a>
             <br>
         </footer>
     </body>
