--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Moritz Rohleder</title>
+        <title>Ardas Legends Wiki</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="design.css">
@@ -17,49 +17,29 @@ and open the template in the editor.
             <br>
             <nav>
                 <h2>
-                    <div class="dropindex">
-                        <button class="indexbtn">    
-                            <a href="index.html" class="Navi" class="navButton">Startseite</a>
-                        </button>
-                        <div class="dropcontent">
-                            <a href="namarie.html">Nam&aacuteri&euml</a>
-                            <a href="moritzRohleder.html">Über mich</a>
-                        </div>
-                    </div>
-                    <a href="betrieb.html" class="Navi">Betrieb</a>
+                    <a href="betrieb.html" class="Navi">Rules</a>
                     <div class="drophobbies">
                         <button class="hobbybtn">
-                            <a href="hobbies.html" class="Navi">Hobbies</a>
+                            <a href="hobbies.html" class="Navi">Factions</a>
                         </button>
                         <div class="dropcontent">
-                            <a href="hobbies.html#basketball">Basketball</a>
-                            <a href="hobbies.html#musik_hören">Musik hören</a>
-                            <a href="hobbies.html#computer">Computer</a>
-                            <a href="hobbies.html#lesen">Lesen</a>
-                            <a href="hobbies.html#freunde">Freunde</a>
-                            <a href="hobbies.html#tanzen">Tanzen</a>
+                            <a href="hobbies.html#basketball">Gundamar</a>
+                            <a href="hobbies.html#musik_hören">Eregion</a>
+                            <a href="hobbies.html#computer">Reunited Kingdom</a>
+                            <a href="hobbies.html#lesen">Bangad-Minhiriath</a>
+                            <a href="hobbies.html#freunde">Waegmunding</a>
+                            <a href="hobbies.html#tanzen">Dale</a>
                         </div>
                     </div>
-                    <a href="lieblingslinks.html" class="Navi">Lieblingslinks</a>
-                    <a href="schule.html" class="Navi">Schule</a>
+                    <a href="lieblingslinks.html" class="Navi">Claiming Map</a>
+                    <a href="schule.html" class="Navi">Staff Team</a>
                 </h2>
             </nav>
             <br>
         </header>
     <main>
-        <a href="moritzRohleder.html" class="invisLinkS">
-            <h1 id="Head">
-                Moritz Rohleder
-            </h1>
-        </a>
-        <br>   
         <p>
-            <!--
             <h3>Nam&aacuteri&euml</h3>
-            <a href="namarie.html"><img src="Bilder/393px-Namarie_Tengwar.png" alt=""/></a>
-            -->
-            <h3>Nam&aacuteri&euml</h3>
-            <a href="namarie.html" ><img src="Bilder/393px-Namarie_Tengwar.png" class="namarieimg" alt=""> </a>
         </p>
     </main>
         <footer>
