--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ and open the template in the editor.
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="design.css">
-        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> 
+        <link rel="shortcut icon" href="ArdasLegendsLogo.ico" type="image/x-icon"> 
     </head>
     <body>
         <header>
@@ -39,7 +39,7 @@ and open the template in the editor.
         </header>
     <main>
         <p>
-            <h3>Nam&aacuteri&euml</h3>
+            <img src="Claimingmap.png" alt="Claiming Map">
         </p>
     </main>
         <footer>
