--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@ and open the template in the editor.
                     <a href="betrieb.html" class="Navi">Rules</a>
                     <div class="drophobbies">
                         <button class="hobbybtn">
-                            <a href="hobbies.html" class="Navi">Factions</a>
+                            <a href="factions.html" class="Navi">Factions</a>
                         </button>
                         <div class="dropcontent">
-                            <a href="hobbies.html#basketball">Gundamar</a>
-                            <a href="hobbies.html#musik_hören">Eregion</a>
-                            <a href="hobbies.html#computer">Reunited Kingdom</a>
-                            <a href="hobbies.html#lesen">Bangad-Minhiriath</a>
-                            <a href="hobbies.html#freunde">Waegmunding</a>
-                            <a href="hobbies.html#tanzen">Dale</a>
+                            <a href="factions.html#avari">Avari</a>
+                            <a href="factions.html#musik_hören">None</a>
+                            <a href="factions.html#computer">None</a>
+                            <a href="factions.html#lesen">None</a>
+                            <a href="factions.html#freunde">None</a>
+                            <a href="factions.html#tanzen">None</a>
                         </div>
                     </div>
                     <a href="lieblingslinks.html" class="Navi">Claiming Map</a>
