--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ and open the template in the editor.
             <br>
             <nav>
                 <h2>
-                    <a href="betrieb.html" class="Navi">Rules</a>
+                    <a href="rules.html" class="Navi">Rules</a>
                     <div class="drophobbies">
                         <button class="hobbybtn">
                             <a href="factions.html" class="Navi">Factions</a>
@@ -31,20 +31,22 @@ and open the template in the editor.
                             <a href="factions.html#tanzen">None</a>
                         </div>
                     </div>
-                    <a href="lieblingslinks.html" class="Navi">Claiming Map</a>
-                    <a href="schule.html" class="Navi">Staff Team</a>
+                    <a href="claiming.html" class="Navi">Claiming</a>
+                    <a href="staff.html" class="Navi">Staff</a>
                 </h2>
             </nav>
             <br>
         </header>
     <main>
         <p>
-            <img src="Claimingmap.png" alt="Claiming Map">
+            Welcome to the Ardas Legends Wiki
+            Currently we are still putting a lot of work into this wiki to ensure it is nice and lovely to look at.
+            We wish you good health in those dire times and hope to see you again.
         </p>
     </main>
         <footer>
             <br>
-            &copy;Moritz Rohleder<a href="impressum.html"> Impressum </a>
+            Ardas Legends<a href="impressum.html"> Impressum </a>
             <br>
         </footer>
     </body>
