--- a/index.html
+++ b/index.html
@@ -17,9 +17,24 @@ and open the template in the editor.
             <br>
             <nav>
                 <h2>
-                    <a href="rules.html" class="Navi">Rules</a>
-                    <div class="drophobbies">
-                        <button class="hobbybtn">
+                    <div class="dropheadline">
+                        <button class="dropheadlinebtn">
+                            <a href="rules.html" class="Navi">Rules</a>
+                        </button>
+                        <div class="dropcontent">
+                            <a href="rules.html#explanation">Explanation</a>
+                            <a href="rules.html#general">General Rules</a>
+                            <a href="rules.html#pvp">PvP Rules</a>
+                            <a href="rules.html#gear">Gear Rules</a>
+                            <a href="rules.html#hunting">Hunting Rules</a>
+                            <a href="rules.html#generalwar">General War Rules</a>
+                            <a href="rules.html#civilwar">Civil War Rules</a>
+                            <a href="rules.html#texpansion">Expansion Rules</a>
+                            <a href="rules.html#discord">Discord Rules</a>
+                        </div>
+                    </div>
+                    <div class="dropheadline">
+                        <button class="dropheadlinebtn">
                             <a href="factions.html" class="Navi">Factions</a>
                         </button>
                         <div class="dropcontent">
