--- a/rules.html
+++ b/rules.html
@@ -1,1 +1,62 @@
-
+<html>
+    <head>
+        <title>Ardas Legends Wiki</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="design.css">
+        <link rel="shortcut icon" href="ArdasLegendsLogo.ico" type="image/x-icon"> 
+    </head>
+    <body>
+        <header>
+            <br>
+            <nav>
+                <h2>
+                    <div class="dropheadline">
+                        <button class="dropheadlinebtn">
+                            <a href="rules.html" class="Navi">Rules</a>
+                        </button>
+                        <div class="dropcontent">
+                            <a href="rules.html#explanation">Explanation</a>
+                            <a href="rules.html#general">General Rules</a>
+                            <a href="rules.html#pvp">PvP Rules</a>
+                            <a href="rules.html#gear">Gear Rules</a>
+                            <a href="rules.html#hunting">Hunting Rules</a>
+                            <a href="rules.html#generalwar">General War Rules</a>
+                            <a href="rules.html#civilwar">Civil War Rules</a>
+                            <a href="rules.html#texpansion">Expansion Rules</a>
+                            <a href="rules.html#discord">Discord Rules</a>
+                        </div>
+                    </div>
+                    <div class="dropheadline">
+                        <button class="dropheadlinebtn">
+                            <a href="factions.html" class="Navi">Factions</a>
+                        </button>
+                        <div class="dropcontent">
+                            <a href="factions.html#avari">Avari</a>
+                            <a href="factions.html#musik_hören">None</a>
+                            <a href="factions.html#computer">None</a>
+                            <a href="factions.html#lesen">None</a>
+                            <a href="factions.html#freunde">None</a>
+                            <a href="factions.html#tanzen">None</a>
+                        </div>
+                    </div>
+                    <a href="claiming.html" class="Navi">Claiming</a>
+                    <a href="staff.html" class="Navi">Staff</a>
+                </h2>
+            </nav>
+            <br>
+        </header>
+    <main>
+        <p>
+            Welcome to the Ardas Legends Wiki
+            Currently we are still putting a lot of work into this wiki to ensure it is nice and lovely to look at.
+            We wish you good health in those dire times and hope to see you again.
+        </p>
+    </main>
+        <footer>
+            <br>
+            Ardas Legends<a href="impressum.html"> Impressum </a>
+            <br>
+        </footer>
+    </body>
+</html>
