--- a/rules.html
+++ b/rules.html
@@ -48,9 +48,7 @@
         </header>
     <main>
         <p>
-            Welcome to the Ardas Legends Wiki
-            Currently we are still putting a lot of work into this wiki to ensure it is nice and lovely to look at.
-            We wish you good health in those dire times and hope to see you again.
+            This is the rule page, it is still under construction
         </p>
     </main>
         <footer>
