--- a/factions.html
+++ b/factions.html
@@ -7,26 +7,42 @@
         <link rel="shortcut icon" href="ArdasLegendsLogo.ico" type="image/x-icon"> 
     </head>
     <body>
-        <header>
+         <header>
             <br>
             <nav>
                 <h2>
-                    <a href="betrieb.html" class="Navi">Rules</a>
-                    <div class="drophobbies">
-                        <button class="hobbybtn">
+                    <a href="claiming.html" class="Navi">Claiming</a>
+                    <div class="dropheadline">
+                        <button class="dropheadlinebtn">
+                            <a href="rules.html" class="Navi">Rules</a>
+                        </button>
+                        <div class="dropcontent">
+                            <a href="rules.html#explanation">Explanation</a>
+                            <a href="rules.html#general">General Rules</a>
+                            <a href="rules.html#pvp">PvP Rules</a>
+                            <a href="rules.html#gear">Gear Rules</a>
+                            <a href="rules.html#hunting">Hunting Rules</a>
+                            <a href="rules.html#generalwar">General War Rules</a>
+                            <a href="rules.html#civilwar">Civil War Rules</a>
+                            <a href="rules.html#texpansion">Expansion Rules</a>
+                            <a href="rules.html#discord">Discord Rules</a>
+                        </div>
+                    </div>
+                    <div class="dropheadline">
+                        <button class="dropheadlinebtn">
                             <a href="factions.html" class="Navi">Factions</a>
                         </button>
                         <div class="dropcontent">
                             <a href="factions.html#avari">Avari</a>
-                            <a href="factions.html#musik_hören">Eregion</a>
-                            <a href="factions.html#computer">Reunited Kingdom</a>
-                            <a href="factions.html#lesen">Bangad-Minhiriath</a>
-                            <a href="factions.html#freunde">Waegmunding</a>
-                            <a href="factions.html#tanzen">Dale</a>
+                            <a href="factions.html#musik_hören">None</a>
+                            <a href="factions.html#computer">None</a>
+                            <a href="factions.html#lesen">None</a>
+                            <a href="factions.html#freunde">None</a>
+                            <a href="factions.html#tanzen">None</a>
                         </div>
                     </div>
-                    <a href="lieblingslinks.html" class="Navi">Claiming Map</a>
-                    <a href="schule.html" class="Navi">Staff Team</a>
+                    <a href="claiming.html" class="Navi">Claiming</a>
+                    <a href="staff.html" class="Navi">Staff</a>
                 </h2>
             </nav>
             <br>
