--- a/factions.html
+++ b/factions.html
@@ -64,7 +64,8 @@
         <article id="avari">
             <h4 class="headlineFaction"> Avari </h4>
             <p>
-                The Avari are the elves of the east. Living in the forest in the shadow of the Orocarni, they live a peaceful live.
+                The Avari are the elves of the east. Living in the forest in the shadow of the Orocarni, they live a peaceful live.<br>
+                The Avari elves are using Woodland Realm alignment, units and gear on Ardas Legends.
             </p>
         </article>
     </main>
