--- a/rules.html
+++ b/rules.html
@@ -11,7 +11,7 @@
             <br>
             <nav>
                 <h2>
-                    <a href="claiming.html" class="Navi">Claiming</a>
+                    <a href="index.html" class="Navi">Main Page</a>
                     <div class="dropheadline">
                         <button class="dropheadlinebtn">
                             <a href="rules.html" class="Navi">Rules</a>
