--- a/factions.html
+++ b/factions.html
@@ -11,7 +11,7 @@
             <br>
             <nav>
                 <h2>
-                    <a href="claiming.html" class="Navi">Claiming</a>
+                    <a href="index.html" class="Navi">Main Page</a>
                     <div class="dropheadline">
                         <button class="dropheadlinebtn">
                             <a href="rules.html" class="Navi">Rules</a>
@@ -53,14 +53,14 @@
     <main>
     <aside>
             <a href="#avari">Avari</a> <br>
-        </aside>
-        <article id="avari">
-            <h4 class="headlineFaction"> Avari </h4>
-            <p>
-                The Avari are the elves of the east. Living in the forest in the shadow of the Orocarni, they live a peaceful live.<br>
-                The Avari elves are using Woodland Realm alignment, units and gear on Ardas Legends.
-            </p>
-        </article>
+    </aside>
+    <article id="avari">
+        <h4 class="headlineFaction"> Avari </h4>
+        <p>
+            The Avari are the elves of the east. Living in the forest in the shadow of the Orocarni, they live a peaceful live.<br>
+            The Avari elves are using Woodland Realm alignment, units and gear on Ardas Legends.
+        </p>
+    </article>
     </main>
         <footer>
             <br>
