--- a/rules.html
+++ b/rules.html
@@ -49,15 +49,15 @@
         </header>
     <main>
     <aside>
-        <a href="rules.html#explanation">Explanation</a>
-        <a href="rules.html#general">General Rules</a>
-        <a href="rules.html#pvp">PvP Rules</a>
-        <a href="rules.html#gear">Gear Rules</a>
-        <a href="rules.html#hunting">Hunting Rules</a>
-        <a href="rules.html#generalwar">General War Rules</a>
-        <a href="rules.html#civilwar">Civil War Rules</a>
-        <a href="rules.html#texpansion">Expansion Rules</a>
-        <a href="rules.html#discord">Discord Rules</a>
+        <a href="rules.html#explanation">Explanation</a><br>
+        <a href="rules.html#general">General Rules</a><br>
+        <a href="rules.html#pvp">PvP Rules</a><br>
+        <a href="rules.html#gear">Gear Rules</a><br>
+        <a href="rules.html#hunting">Hunting Rules</a><br>
+        <a href="rules.html#generalwar">General War Rules</a><br>
+        <a href="rules.html#civilwar">Civil War Rules</a><br>
+        <a href="rules.html#texpansion">Expansion Rules</a><br>
+        <a href="rules.html#discord">Discord Rules</a><br>
     </aside>
         <p>
             This is the rule page, it is still under construction
