--- a/factions.html
+++ b/factions.html
@@ -55,7 +55,7 @@
             <a href="#avari">Avari</a> <br>
     </aside>
     <article id="avari">
-        <h4 class="headlineFaction"> Avari </h4>
+        <h4 class="headlinearticles"> Avari </h4>
         <p>
             The Avari are the elves of the east. Living in the forest in the shadow of the Orocarni, they live a peaceful live.<br>
             The Avari elves are using Woodland Realm alignment, units and gear on Ardas Legends.
