--- a/rules.html
+++ b/rules.html
@@ -59,9 +59,21 @@
         <a href="rules.html#texpansion">Expansion Rules</a><br>
         <a href="rules.html#discord">Discord Rules</a><br>
     </aside>
+    <p>
+        This is the rule page, it is still under construction
+    </p>
+    <article id="explanation">
+        <h4 class="headlinearticles"> Explanations </h4>
         <p>
-            This is the rule page, it is still under construction
+            Safe zone => A safe zone is a region claimed by your faction, or community places like spawn. Allied claim regions do not count as safe zones.<br>
+            Plundering => Plundering is the looting of an Unbannered build. Griefing is not allowed in the process!<br>
+            Claimbuild => A claim build is required to claim a region and has to be approved by staff and be bannered.<br>
+            Region => When talking about regions, we always refer to the claim regions shown in #claim-regions.<br>
         </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
     </main>
         <footer>
             <br>
