--- a/factions.html
+++ b/factions.html
@@ -47,7 +47,7 @@
             </nav>
             <br>
         </header>
-    <h1 id"head">
+    <h1 id="head">
         Factions
     </h1>
     <main>
