--- a/rules.html
+++ b/rules.html
@@ -74,6 +74,24 @@
     <p class="between">
         <br>
     </p>
+    <article id="general">
+        <h4 class="headlinearticles"> General Rules </h4>
+        <p>
+            General Rules
+        </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
+    <article id="pvp">
+        <h4 class="headlinearticles"> PvP Rules </h4>
+        <p>
+            PvP Rules
+        </p>
+    </article>
+    <p class="between">
+        <br>
+    </p>
     </main>
         <footer>
             <br>
