--- a/rules.html
+++ b/rules.html
@@ -47,52 +47,55 @@
             </nav>
             <br>
         </header>
-    <main>
-    <aside>
-        <a href="rules.html#explanation">Explanation</a><br>
-        <a href="rules.html#general">General Rules</a><br>
-        <a href="rules.html#pvp">PvP Rules</a><br>
-        <a href="rules.html#gear">Gear Rules</a><br>
-        <a href="rules.html#hunting">Hunting Rules</a><br>
-        <a href="rules.html#generalwar">General War Rules</a><br>
-        <a href="rules.html#civilwar">Civil War Rules</a><br>
-        <a href="rules.html#texpansion">Expansion Rules</a><br>
-        <a href="rules.html#discord">Discord Rules</a><br>
-    </aside>
-    <p>
-        This is the rule page, it is still under construction
-    </p>
-    <article id="explanation">
-        <h4 class="headlinearticles"> Explanations </h4>
+        <h1 id="head">
+            Rules
+        </h1>
+        <main>
+        <aside>
+            <a href="rules.html#explanation">Explanation</a><br>
+            <a href="rules.html#general">General Rules</a><br>
+            <a href="rules.html#pvp">PvP Rules</a><br>
+            <a href="rules.html#gear">Gear Rules</a><br>
+            <a href="rules.html#hunting">Hunting Rules</a><br>
+            <a href="rules.html#generalwar">General War Rules</a><br>
+            <a href="rules.html#civilwar">Civil War Rules</a><br>
+            <a href="rules.html#texpansion">Expansion Rules</a><br>
+            <a href="rules.html#discord">Discord Rules</a><br>
+        </aside>
         <p>
-            Safe zone => A safe zone is a region claimed by your faction, or community places like spawn. Allied claim regions do not count as safe zones.<br>
-            Plundering => Plundering is the looting of an Unbannered build. Griefing is not allowed in the process!<br>
-            Claimbuild => A claim build is required to claim a region and has to be approved by staff and be bannered.<br>
-            Region => When talking about regions, we always refer to the claim regions shown in #claim-regions.<br>
+            This is the rule page, it is still under construction
         </p>
-    </article>
-    <p class="between">
-        <br>
-    </p>
-    <article id="general">
-        <h4 class="headlinearticles"> General Rules </h4>
-        <p>
-            General Rules
+        <article id="explanation">
+            <h4 class="headlinearticles"> Explanations </h4>
+            <p>
+                Safe zone => A safe zone is a region claimed by your faction, or community places like spawn. Allied claim regions do not count as safe zones.<br>
+                Plundering => Plundering is the looting of an Unbannered build. Griefing is not allowed in the process!<br>
+                Claimbuild => A claim build is required to claim a region and has to be approved by staff and be bannered.<br>
+                Region => When talking about regions, we always refer to the claim regions shown in #claim-regions.<br>
+            </p>
+        </article>
+        <p class="between">
+            <br>
         </p>
-    </article>
-    <p class="between">
-        <br>
-    </p>
-    <article id="pvp">
-        <h4 class="headlinearticles"> PvP Rules </h4>
-        <p>
-            PvP Rules
+        <article id="general">
+            <h4 class="headlinearticles"> General Rules </h4>
+            <p>
+                General Rules
+            </p>
+        </article>
+        <p class="between">
+            <br>
         </p>
-    </article>
-    <p class="between">
-        <br>
-    </p>
-    </main>
+        <article id="pvp">
+            <h4 class="headlinearticles"> PvP Rules </h4>
+            <p>
+                PvP Rules
+            </p>
+        </article>
+        <p class="between">
+            <br>
+        </p>
+        </main>
         <footer>
             <br>
             Ardas Legends<a href="impressum.html"> Impressum </a>
