--- a/rules.html
+++ b/rules.html
@@ -59,7 +59,7 @@
             <a href="rules.html#hunting">Hunting Rules</a><br>
             <a href="rules.html#generalwar">General War Rules</a><br>
             <a href="rules.html#civilwar">Civil War Rules</a><br>
-            <a href="rules.html#texpansion">Expansion Rules</a><br>
+            <a href="rules.html#expansion">Expansion Rules</a><br>
             <a href="rules.html#discord">Discord Rules</a><br>
         </aside>
         <p>
@@ -80,7 +80,14 @@
         <article id="general">
             <h4 class="headlinearticles"> General Rules </h4>
             <p>
-                General Rules
+                1.	No griefing.<br>
+                2.	No stealing.<br>
+                3.	No hacks or cheating clients.<br>
+                4.	No insulting or thoughtfully hurting someone.<br>
+                5.	Staff has the final word.<br>
+                6.	Respect everyone.<br>
+                7.	Map Location has to be on.<br>
+                8.	Middle Earth is the only allowed dimension. Overworld, Nether, The End and Utumno are forbidden.<br>
             </p>
         </article>
         <p class="between">
@@ -89,7 +96,87 @@
         <article id="pvp">
             <h4 class="headlinearticles"> PvP Rules </h4>
             <p>
-                PvP Rules
+                1.	PvP in someone´s base/town is only allowed during events or by mutual agreement.<br>
+                2.	The Town of Silencia and spawn are PvP free zones, no PvP may happen here not even with mutual agreement.<br>
+                3.	PvP in a safe zone is not allowed, unless by mutual agreement.<br>
+                4.	Unbannered builds are open to plundering. During a plunder PvP may happen. The building’s owner is responsible for protecting his build.<br>
+                5.	PvP during events is only allowed if the event staff gives consent.<br>
+            </p>
+        </article>
+        <p class="between">
+            <br>
+        </p>
+        <article id="gear">
+            <h4 class="headlinearticles"> Gear Rules </h4>
+            <p>
+                1.	Mithril Armour is not allowed under any circumstances!<br>
+                2.	In PvE a player may use any weapon he desires to use.<br>
+                3.	In PvE a player may use any armour except for Mithril Armour.<br>
+                4.	Roleplay gear is to be used in PvP, Hunts and any other kind of Roleplay and war combat.<br>
+                5.	During events roleplay gear is the default gear, other gear may only be used if event staff gives consent.<br>
+                6.	Mithril weapons, Utumno weapons, the Gondolinian sword and the Mallorn mace are excluded from roleplay gear under all circumstances.<br>
+                7.	Roleplay gear means the armour and weapons your faction provides if you do not have a roleplay character.<br>
+                8.	A faction can acquire access to other faction’s weapons (weapons only not the armour) by trade with another faction. Weapon trade may only be initiated by a faction leader.<br>
+                9.	If you use a roleplay character you may use the gear you described in your application, even if it is not the faction provided gear (gear has to approve the gear in the application).<br>
+                10.	A player can acquire gear from other factions through roleplay, that gas been accepted by staff.<br>
+            </p>
+        </article>
+        <p class="between">
+            <br>
+        </p>
+        <article id="hunting">
+            <h4 class="headlinearticles"> Hunting Rules </h4>
+            <p>
+                1.	The hunter has to announce the hunt two minutes before starting the hunt.<br>
+                2.	The hunter and the hunted have to be in the same biome, for the hunt to start.<br>
+                3.	Players in a safe zone cannot be hunted.<br>
+                4.	Only roleplay gear may be used during hunts.<br>
+                5.	The hunt ends after 10 minutes, unless following happens:<br>
+                    a.	The hunt ends when the hunted reaches a safe zone, or is unreachable for the hunter due to banner protection.<br>
+                    b.	The hunt ends when the hunter or the hunted die, no matter how.<br>
+            </p>
+        </article>
+        <p class="between">
+            <br>
+        </p>
+        <article id="generalwar">
+            <h4 class="headlinearticles"> General War Rules </h4>
+            <p>
+                The War System is being reworked by Staff currently, we bid you have patience.
+                During this maintainence wars in general are disabled.
+                If you do have suggestions pls wait till the system is released and see if we covered it maybe.
+            </p>
+        </article>
+        <p class="between">
+            <br>
+        </p>
+        <article id="civilwar">
+            <h4 class="headlinearticles"> Civil War Rules </h4>
+            <p>
+                As part of the War System, the Civil Wars are as well disabled atm.
+            </p>
+        </article>
+        <p class="between">
+            <br>
+        </p>
+        <article id="expansion">
+            <h4 class="headlinearticles"> Expansion Rules </h4>
+            <p>
+                Alongside the War System, we also plan to reform the expansion/claiming System, however you may still build and submit claimbuilds.
+            </p>
+        </article>
+        <p class="between">
+            <br>
+        </p>
+        <article id="discord">
+            <h4 class="headlinearticles"> Discord Rules </h4>
+            <p>
+                1.	You are only allowed to have one faction role at a time.<br>
+                2.	Bot commands are to be kept in the correct channels.<br>
+                3.	Follow the channel descriptions when posting something or writing a message. Stick to the appropriate channel.<br>
+                4.	The general rules apply for both discord and Minecraft.<br>
+                5.	Spamming of any kind is not acceptable. It may result in a temporery ban if staff deems it appropiate.<br>
+                6.	Spoilers have to be marked as spoilers and it needs to be given what it is a spoiler for.<br>
             </p>
         </article>
         <p class="between">
