added all factions to the drop and side list

--- a/factions.html
+++ b/factions.html
@@ -34,11 +34,43 @@
                         </button>
                         <div class="dropcontent">
                             <a href="factions.html#avari">Avari</a>
-                            <a href="factions.html#musik_hören">None</a>
-                            <a href="factions.html#computer">None</a>
-                            <a href="factions.html#lesen">None</a>
-                            <a href="factions.html#freunde">None</a>
-                            <a href="factions.html#tanzen">None</a>
+                            <a href="factions.html#beornings">Beornings</a>
+                            <a href="factions.html#dale">Dale</a>
+                            <a href="factions.html#dol_guldur">Dol_Guldur</a>
+                            <a href="factions.html#dorwinion">Dorwinion</a>
+                            <a href="factions.html#dunland">Dunland</a>
+                            <a href="factions.html#durins">Durins_Folk</a>
+                            <a href="factions.html#ered_luin">Ered_Luin_Dwarves</a>
+                            <a href="factions.html#eregion">Eregion</a>
+                            <a href="factions.html#fangorn">Fangorn</a>
+                            <a href="factions.html#harad_gulf">Gulf_of_Harad</a>
+                            <a href="factions.html#gundamar">Gundamar</a>
+                            <a href="factions.html#half_trolls">Half Trolls</a>
+                            <a href="factions.html#harnedor">Harnedor</a>
+                            <a href="factions.html#hobbits">Hobbits</a>
+                            <a href="factions.html#isengard">Isengard</a>
+                            <a href="factions.html#khand">Khand</a>
+                            <a href="factions.html#lindon">Lindon</a>
+                            <a href="factions.html#lothlorien">Lothlórien</a>
+                            <a href="factions.html#mordor">Mordor</a>
+                            <a href="factions.html#morwaith">Morwaith</a>
+                            <a href="factions.html#nomads">Nomads</a>
+                            <a href="factions.html#orocarni">Orocarni_Dwarves</a>
+                            <a href="factions.html#reunited_kingdom">Reunited_Kingdom</a>
+                            <a href="factions.html#rhudaur">Rhudaur</a>
+                            <a href="factions.html#rhudel">Rhudel</a>
+                            <a href="factions.html#rivendell">Rivendell</a>
+                            <a href="factions.html#rohan">Rohan</a>
+                            <a href="factions.html#southron_coast">Southron_Coast</a>
+                            <a href="factions.html#taurethrim">Taurethrim</a>
+                            <a href="factions.html#umbar">Umbar</a>
+                            <a href="factions.html#corsairs">Corsairs_of_the_Coast</a>
+                            <a href="factions.html#woodelves">Woodland_Realm</a>
+                            <a href="factions.html#woodmen">Woodmen</a>
+                            <a href="factions.html#bangad">Bangad Minhiriath</a>
+                            <a href="factions.html#haradmnts">Harad_Mountains</a>
+                            <a href="factions.html#waegmundig">Waegmundig</a>
+                            <a href="factions.html#wanderer">Wanderer</a>
                         </div>
                     </div>
                     <a href="claiming.html" class="Navi">Claiming</a>
@@ -52,7 +84,44 @@
     </h1>
     <main>
     <aside>
-            <a href="#avari">Avari</a> <br>
+            <a href="factions.html#avari">Avari</a><br>
+            <a href="factions.html#beornings">Beornings</a><br>
+            <a href="factions.html#dale">Dale</a><br>
+            <a href="factions.html#dol_guldur">Dol_Guldur</a><br>
+            <a href="factions.html#dorwinion">Dorwinion</a><br>
+            <a href="factions.html#dunland">Dunland</a><br>
+            <a href="factions.html#durins">Durins_Folk</a><br>
+            <a href="factions.html#ered_luin">Ered_Luin_Dwarves</a><br>
+            <a href="factions.html#eregion">Eregion</a><br>
+            <a href="factions.html#fangorn">Fangorn</a><br>
+            <a href="factions.html#harad_gulf">Gulf_of_Harad</a><br>
+            <a href="factions.html#gundamar">Gundamar</a><br>
+            <a href="factions.html#half_trolls">Half Trolls</a><br>
+            <a href="factions.html#harnedor">Harnedor</a><br>
+            <a href="factions.html#hobbits">Hobbits</a><br>
+            <a href="factions.html#isengard">Isengard</a><br>
+            <a href="factions.html#khand">Khand</a><br>
+            <a href="factions.html#lindon">Lindon</a><br>
+            <a href="factions.html#lothlorien">Lothlórien</a><br>
+            <a href="factions.html#mordor">Mordor</a><br>
+            <a href="factions.html#morwaith">Morwaith</a><br>
+            <a href="factions.html#nomads">Nomads</a><br>
+            <a href="factions.html#orocarni">Orocarni_Dwarves</a><br>
+            <a href="factions.html#reunited_kingdom">Reunited_Kingdom</a><br>
+            <a href="factions.html#rhudaur">Rhudaur</a><br>
+            <a href="factions.html#rhudel">Rhudel</a><br>
+            <a href="factions.html#rivendell">Rivendell</a><br>
+            <a href="factions.html#rohan">Rohan</a><br>
+            <a href="factions.html#southron_coast">Southron_Coast</a><br>
+            <a href="factions.html#taurethrim">Taurethrim</a><br>
+            <a href="factions.html#umbar">Umbar</a><br>
+            <a href="factions.html#corsairs">Corsairs_of_the_Coast</a><br>
+            <a href="factions.html#woodelves">Woodland_Realm</a><br>
+            <a href="factions.html#woodmen">Woodmen</a><br>
+            <a href="factions.html#bangad">Bangad Minhiriath</a><br>
+            <a href="factions.html#haradmnts">Harad_Mountains</a><br>
+            <a href="factions.html#waegmundig">Waegmundig</a><br>
+            <a href="factions.html#wanderer">Wanderer</a><br>
     </aside>
     <article id="avari">
         <h4 class="headlinearticles"> Avari </h4>
