--- a/claiming.html
+++ b/claiming.html
@@ -1,1 +1,100 @@
-
+<!DOCTYPE html>
+<!--
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+-->
+<html>
+    <head>
+        <title>Ardas Legends Wiki</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="design.css">
+        <link rel="shortcut icon" href="ArdasLegendsLogo.ico" type="image/x-icon"> 
+    </head>
+    <body>
+        <header>
+            <br>
+            <nav>
+                <h2>
+                    <a href="index.html" class="Navi">Main Page</a>
+                    <div class="dropheadline">
+                        <button class="dropheadlinebtn">
+                            <a href="rules.html" class="Navi">Rules</a>
+                        </button>
+                        <div class="dropcontent">
+                            <a href="rules.html#explanation">Explanation</a>
+                            <a href="rules.html#general">General Rules</a>
+                            <a href="rules.html#pvp">PvP Rules</a>
+                            <a href="rules.html#gear">Gear Rules</a>
+                            <a href="rules.html#hunting">Hunting Rules</a>
+                            <a href="rules.html#generalwar">General War Rules</a>
+                            <a href="rules.html#civilwar">Civil War Rules</a>
+                            <a href="rules.html#texpansion">Expansion Rules</a>
+                            <a href="rules.html#discord">Discord Rules</a>
+                        </div>
+                    </div>
+                    <div class="dropheadline">
+                        <button class="dropheadlinebtn">
+                            <a href="factions.html" class="Navi">Factions</a>
+                        </button>
+                        <div class="dropcontent">
+                            <a href="factions.html#avari">Avari</a>
+                            <a href="factions.html#beornings">Beornings</a>
+                            <a href="factions.html#dale">Dale</a>
+                            <a href="factions.html#dol_guldur">Dol_Guldur</a>
+                            <a href="factions.html#dorwinion">Dorwinion</a>
+                            <a href="factions.html#dunland">Dunland</a>
+                            <a href="factions.html#durins">Durins_Folk</a>
+                            <a href="factions.html#ered_luin">Ered_Luin_Dwarves</a>
+                            <a href="factions.html#eregion">Eregion</a>
+                            <a href="factions.html#fangorn">Fangorn</a>
+                            <a href="factions.html#harad_gulf">Gulf_of_Harad</a>
+                            <a href="factions.html#gundamar">Gundamar</a>
+                            <a href="factions.html#half_trolls">Half Trolls</a>
+                            <a href="factions.html#harnedor">Harnedor</a>
+                            <a href="factions.html#hobbits">Hobbits</a>
+                            <a href="factions.html#isengard">Isengard</a>
+                            <a href="factions.html#khand">Khand</a>
+                            <a href="factions.html#lindon">Lindon</a>
+                            <a href="factions.html#lothlorien">Lothlórien</a>
+                            <a href="factions.html#mordor">Mordor</a>
+                            <a href="factions.html#morwaith">Morwaith</a>
+                            <a href="factions.html#nomads">Nomads</a>
+                            <a href="factions.html#orocarni">Orocarni_Dwarves</a>
+                            <a href="factions.html#reunited_kingdom">Reunited_Kingdom</a>
+                            <a href="factions.html#rhudaur">Rhudaur</a>
+                            <a href="factions.html#rhudel">Rhudel</a>
+                            <a href="factions.html#rivendell">Rivendell</a>
+                            <a href="factions.html#rohan">Rohan</a>
+                            <a href="factions.html#southron_coast">Southron_Coast</a>
+                            <a href="factions.html#taurethrim">Taurethrim</a>
+                            <a href="factions.html#umbar">Umbar</a>
+                            <a href="factions.html#corsairs">Corsairs_of_the_Coast</a>
+                            <a href="factions.html#woodelves">Woodland_Realm</a>
+                            <a href="factions.html#woodmen">Woodmen</a>
+                            <a href="factions.html#bangad">Bangad Minhiriath</a>
+                            <a href="factions.html#haradmnts">Harad_Mountains</a>
+                            <a href="factions.html#waegmundig">Waegmundig</a>
+                            <a href="factions.html#wanderer">Wanderer</a>
+                        </div>
+                    </div>
+                    <a href="claiming.html" class="Navi">Claiming</a>
+                    <a href="staff.html" class="Navi">Staff</a>
+                </h2>
+            </nav>
+            <br>
+        </header>
+    <main>
+        <p>
+          Welcome to the Claiming Page of the Ardas Legends Wiki.<br>
+          This page is still under construction, we bid you patients.<br>
+        </p>
+    </main>
+        <footer>
+            <br>
+            Ardas Legends<a href="impressum.html"> Impressum </a>
+            <br>
+        </footer>
+    </body>
+</html>
